--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h3 {
     font-weight: 300;
     margin: 0;
     color: #efefef;
-    padding-bottom: 10px;
+    padding-bottom: 0px;
 
 
 }
@@ -59,22 +59,23 @@ p {
 
 }
 
-span {
-    color: #5FFFE9;
-}
 
 /* ------NAV BAR------ */
+.line {
+    border-bottom: 1px solid #5FFFE9; /* Adjust color as needed */
+    margin-bottom: 20px; /* Adjust margin as needed */
+}
 
 nav {
-    background-color: #1f242d;
-    padding: 0.2em;
+    background-color: #111626;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: -webkit-sticky;
     position: sticky;
-    top: 15px;
+    padding-top: 10px;
     z-index: 2000;
+    padding-bottom: 10px;
 }
 
 nav .nav-links {
@@ -82,6 +83,7 @@ nav .nav-links {
     flex-wrap: nowrap;
     justify-content: flex-end;
     margin-right: 10px;
+    height: 100%;
 }
 
 nav .nav-logo {
@@ -111,6 +113,9 @@ nav a:hover {
     color: #5FFFE9;
 }
 
+
+
+
 /* ------ main content ------ */
 
 .container {
@@ -139,81 +144,80 @@ nav a:hover {
     justify-content: center;
 }
 
+.blue {
+    color: #5FFFE9;
+}
+
+span:hover {
+    color: #5FFFE9;
+}
+
+.image-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #3A506B;
+    border-radius: 10px;
+    box-shadow: 20px 20px 10px 2px rgba(0, 0, 0, 0.38);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.image-container img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
 .cv-download {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px 0px;
-    margin: 10px;
+
 }
 
-.botao {
-    width: 200px;
-    height: 45px;
-    border-radius: 20px;
-    border: none;
-    box-shadow: 1px 1px rgba(107, 221, 215, 0.37);
-    padding: 5px 10px;
-    background: rgb(47, 93, 197);
-    background: linear-gradient(160deg, rgba(47, 93, 197, 1) 0%, rgba(46, 86, 194, 1) 5%, rgba(47, 93, 197, 1) 11%, rgba(59, 190, 230, 1) 57%, rgba(0, 212, 255, 1) 71%);
-    color: #fff;
-    font-family: Roboto, sans-serif;
-    font-weight: 505;
-    font-size: 16px;
+.raise:hover,
+.raise:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+    transform: translateY(-0.25em);
+}
+
+.raise {
+    --color: #5FFFE9;
+    --hover: #5FFFE9;
+    background: none;
+    border: 2px solid;
+    font: inherit;
     line-height: 1;
-    cursor: pointer;
-    filter: drop-shadow(0 0 10px rgba(59, 190, 230, 0.568));
-    transition: .5s linear;
+    margin: 0.5em;
+    padding: 1em 2em;
+    border-radius: 10px;
+    color: var(--color);
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: 0.2s;
     position: relative;
-
+    overflow: hidden;
+    z-index: 1;
 }
 
 
+.buttons {
+       background: none;
+       border: 2px solid;
+       font: inherit;
+       line-height: 1;
+       margin: 0.5em;
+       padding: 1em 2em;
+       border-radius: 10px
+   }
 
-.botao .mysvg {
-    display: none;
+h1 { font-weight: 400; }
+
+code {
+    color: #e4cb58;
+    font: inherit;
 }
-
-.botao:hover {
-    width: 60px;
-    height: 50px;
-    border-radius: 50%;
-    transition: .5s linear;
-}
-
-.botao:hover .texto {
-    display: none;
-}
-
-.botao:hover .mysvg {
-    display: inline;
-}
-
-.botao:hover::before {
-    content: '';
-    position: absolute;
-    top: -3px;
-    left: -3px;
-    width: 100%;
-    height: 100%;
-    border: 3.5px solid transparent;
-    border-top: 3.5px solid #fff;
-    border-right: 3.5px solid #fff;
-    border-radius: 50%;
-    animation: animateC 2s linear infinite;
-}
-
-@keyframes animateC {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-
 
 
 
