--- a/style.css
+++ b/style.css
@@ -73,9 +73,8 @@ nav {
     align-items: center;
     position: -webkit-sticky;
     position: sticky;
-    padding-top: 10px;
     z-index: 2000;
-    padding-bottom: 10px;
+    height: 50px;
 }
 
 nav .nav-links {
@@ -100,13 +99,15 @@ nav .nav-logo {
     text-decoration: none;
     margin: 0 1em;
     cursor: default;
+
 }
 
-.nav-links a {
+.nav-links button {
     color: #fff;
     text-decoration: none;
-    padding: 0.5em 1em;
-    margin: 0 1em;
+    padding: 0.5em 3em;
+    margin: 0;
+    border: none;
 }
 
 nav a:hover {
@@ -121,8 +122,8 @@ nav a:hover {
 .container {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    align-items: flex-start;
+    justify-content: center;
     padding: 100px 0;
 }
 
@@ -135,6 +136,7 @@ nav a:hover {
     background-color: #3A506B;
     border-radius: 10px;
     box-shadow: 20px 20px 10px 2px rgba(0, 0, 0, 0.38);
+    margin: 0 20px;
 }
 
 .text {
@@ -161,6 +163,8 @@ span:hover {
     box-shadow: 20px 20px 10px 2px rgba(0, 0, 0, 0.38);
     background-size: cover;
     background-repeat: no-repeat;
+    width: 500px;
+    margin: 0 20px;
 }
 .image-container img {
     width: 100%;
@@ -181,6 +185,7 @@ span:hover {
     transform: translateY(-0.25em);
 }
 
+
 .raise {
     --color: #5FFFE9;
     --hover: #5FFFE9;
@@ -194,13 +199,33 @@ span:hover {
     color: var(--color);
     text-align: center;
     text-decoration: none;
-    text-transform: uppercase;
     transition: 0.2s;
     position: relative;
     overflow: hidden;
     z-index: 1;
 }
+.up:hover,
+.up:focus {
+    box-shadow: inset 0 -3.25em 0 0 var(--hover);
+}
 
+.up {
+    --color: #5BC0BE;
+    --hover: #5BC0BE;
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+    color: var(--color);
+    text-align: center;
+    text-decoration: none;
+    transition: 0.2s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+}
 
 .buttons {
        background: none;
@@ -209,7 +234,6 @@ span:hover {
        line-height: 1;
        margin: 0.5em;
        padding: 1em 2em;
-       border-radius: 10px
    }
 
 h1 { font-weight: 400; }
@@ -219,6 +243,112 @@ code {
     font: inherit;
 }
 
+.story-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #3A506B;
+    border-radius: 10px;
+    box-shadow: 20px 20px 10px 2px rgba(0, 0, 0, 0.38);
+    padding: 20px 50px;
+    width: 50%;
+    margin: 0 20px;
+    cursor: default;
+}
+
+
+.skills {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #3A506B;
+    padding: 20px 50px;
+    border-radius: 10px;
+    box-shadow: 20px 20px 10px 2px rgba(0, 0, 0, 0.38);
+    z-index: 10;
+    margin: 0 20px;
+    cursor: default;
+}
+
+.skill {
+    margin-bottom: 20px;
+}
+
+.skill h2 {
+    margin-bottom: 5px;
+}
+
+.skill-bar {
+    background-color: #f0f0f0;
+    border-radius: 5px;
+    height: 20px;
+    margin-top: 5px;
+    overflow: hidden;
+}
+
+.skill-level {
+    background-color: #4caf50;
+    color: white;
+    text-align: center;
+    line-height: 20px;
+    width: 0; /* Initial width set to 0 */
+    transition: width 1s ease-in-out; /* Smooth transition for width changes */
+}
+
+/* Specific styles for each skill */
+.skill-level.html {
+    width: 75%; /* HTML skill level */
+}
+
+.skill-level.css {
+    width: 60%; /* CSS skill level */
+}
+
+.skill-level.js {
+    width: 50%; /* JavaScript skill level */
+}
+
+.skill-level.python {
+    width: 40%; /* Python skill level */
+}
+
+.contacts-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #3A506B;
+    border-radius: 10px;
+    box-shadow: 20px 20px 10px 2px rgba(0, 0, 0, 0.38);
+    padding: 20px 50px;
+    margin: 0 20px;
+    cursor: default;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 20px 50px;
+    margin: 0 20px;
+    cursor: default;
+}
+
+.contact p {
+    margin-bottom: 5px;
+}
+
+.contact i {
+    margin-right: 10px;
+}
+
+.contact a {
+    color: #ffffff;
+    text-decoration: none;
+}
 
 
 
