--- a/style.css
+++ b/style.css
@@ -115,8 +115,6 @@ nav a:hover {
 }
 
 
-
-
 /* ------ main content ------ */
 
 .container {
@@ -166,6 +164,7 @@ span:hover {
     width: 500px;
     margin: 0 20px;
 }
+
 .image-container img {
     width: 100%;
     height: 100%;
@@ -204,6 +203,7 @@ span:hover {
     overflow: hidden;
     z-index: 1;
 }
+
 .up:hover,
 .up:focus {
     box-shadow: inset 0 -3.25em 0 0 var(--hover);
@@ -228,15 +228,17 @@ span:hover {
 }
 
 .buttons {
-       background: none;
-       border: 2px solid;
-       font: inherit;
-       line-height: 1;
-       margin: 0.5em;
-       padding: 1em 2em;
-   }
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+}
 
-h1 { font-weight: 400; }
+h1 {
+    font-weight: 400;
+}
 
 code {
     color: #e4cb58;
@@ -350,5 +352,66 @@ code {
     text-decoration: none;
 }
 
+.container-project {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 100px 30px;
+}
+
+.container-project h1 {
+    margin-bottom: 30px;
+}
+
+.container-project .text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 20px 50px;
+    border-radius: 10px;
+    box-shadow: 20px 20px 10px 2px rgba(0, 0, 0, 0.38);
+    margin: 0 20px;
+    cursor: default;
+}
+
+.text-container-project {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 20px 50px;
+    margin: 20px 20px;
+
+}
+
+.project {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 50px;
+    background-color: #3A506B;
+    border-radius: 10px;
+    box-shadow: 20px 20px 10px 2px rgba(0, 0, 0, 0.38);
+    margin: 20px 20px;
+    cursor: default;
+}
+
+.project-img img {
+    width: 400px;
+    height: 300px;
+}
+
+button {
+    background-color: #5FFFE9;
+    color: #1f242d;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.2s;
+    align-items: center;
+}
 
 
